# xml-benchmark

./: .gitignore  README.md  index.html
.github/workflows/: benchmark.yml
benchmarks/: runner.sh
benchmarks/celementtree/: Dockerfile  bench.py
benchmarks/encoding-xml/: Dockerfile  go.mod  main.go
benchmarks/expat/: CMakeLists.txt  Dockerfile  bench.cpp
benchmarks/fast-xml-parser/: Dockerfile  bench.js  package.json
benchmarks/libxml2/: CMakeLists.txt  Dockerfile  bench.cpp
benchmarks/lxml/: Dockerfile  bench.py
benchmarks/pugixml/: CMakeLists.txt  Dockerfile  bench.cpp
benchmarks/quick-xml/: Cargo.toml  Dockerfile
benchmarks/quick-xml/src/: main.rs
benchmarks/rapidxml/: CMakeLists.txt  Dockerfile  bench.cpp
benchmarks/roxmltree/: Cargo.toml  Dockerfile
benchmarks/roxmltree/src/: main.rs
benchmarks/system-xml/: Dockerfile  Program.cs
benchmarks/vtd-xml/: Dockerfile  pom.xml
benchmarks/vtd-xml/src/main/java/bench/: Bench.java
benchmarks/woodstox/: Dockerfile  pom.xml
benchmarks/woodstox/src/main/java/bench/: Bench.java
benchmarks/xerces/: Dockerfile  pom.xml
benchmarks/xerces/src/main/java/bench/: Bench.java
docs/superpowers/plans/: 2026-04-06-xml-benchmark.md
docs/superpowers/specs/: 2026-04-06-xml-benchmark-design.md
report/: index.html
tools/: common.py  download_data.py  generate_data.py  orchestrator.py  report_generator.py
