cmake_minimum_required(VERSION 3.16)
project(pugixml_bench)
set(CMAKE_CXX_STANDARD 17)
include(FetchContent)
FetchContent_Declare(pugixml GIT_REPOSITORY https://github.com/zeux/pugixml.git GIT_TAG master)
FetchContent_MakeAvailable(pugixml)
add_executable(bench bench.cpp)
target_link_libraries(bench pugixml::pugixml)
